npm init -w ./packages/binder

--- a/packages/binder/package.json
+++ b/packages/binder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mwe-esbuild",
+  "name": "binder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/rgaiacs/mwe-esbuild/issues"
   },
-  "homepage": "https://github.com/rgaiacs/mwe-esbuild#readme",
-  "workspaces": [
-    "packages/binder"
-  ]
+  "homepage": "https://github.com/rgaiacs/mwe-esbuild#readme"
 }
