npm install --save-exact --save-dev esbuild -w binder

--- a/packages/binder/package.json
+++ b/packages/binder/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/rgaiacs/mwe-esbuild/issues"
   },
-  "homepage": "https://github.com/rgaiacs/mwe-esbuild#readme"
+  "homepage": "https://github.com/rgaiacs/mwe-esbuild#readme",
+  "devDependencies": {
+    "esbuild": "0.25.5"
+  }
 }
