--- a/packages/binder/package.json
+++ b/packages/binder/package.json
@@ -2,9 +2,9 @@
   "name": "binder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "esbuild --bundle --outfile=dist/binder.js src/index.js"
   },
   "repository": {
     "type": "git",
