--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mwe-esbuild",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/rgaiacs/mwe-esbuild#readme",
   "workspaces": [
     "packages/binder"
-  ]
+  ],
+  "devDependencies": {
+    "express": "^5.1.0"
+  }
 }
